# OpenIGTLink

./: CMakeLists.txt
Wrapping/CSharp/: CMakeLists.txt
swig_interface/: igtlClientSocket.i  igtl_util.i
